test/cases/compile_errors/while_expected_error_union_got_bool.zig
export fn foo() void {
    while (bar()) |x| {
        _ = x;
    } else |err| {
        _ = err;
    }
}
fn bar() bool {
    return true;
}

// error
//
// :2:15: error: expected error union type, found 'bool'
